--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -2,19 +2,28 @@
    .main-container {
      #painter-intro {
        padding: $centratura;
+       background-image: url("imgs/painteressentials-7.jpg");
+       background-repeat: no-repeat;
+       background-position: top center;
+       height: 450px;
        .intro-container {
-         background-image: url("../imgs/painteressentials-7.jpg");
-         background-size: cover;
+         padding-top: 20px;
+         height: 100%;
          display: flex;
          justify-content: space-between;
          .firma-uno {
+           width: 25%;
            display: flex;
            justify-content: flex-end;
            flex-direction: column;
+           color: white;
+           font-size: 0.7em;
+           padding-bottom: 20px;
          }
          .product-info {
-           // color: $cl_primary;
+           color: $cl_primary;
            h2 {
+             padding-top: 30px;
              font-size: 2em;
            }
            h3 {
@@ -26,10 +35,15 @@
            li {
              display: block;
              margin-bottom: 0.7em;
+             span {
+               color: grey;
+             }
            }
            .download-trial {
-             background-color: lightgrey;
+             background-color: #5b5c5a;
              display: inline-block;
+             padding: 5px 10px;
+             margin-top: 30px;
              p {
                font-weight: bold;
              }
@@ -40,6 +54,7 @@
          }
          .sale {
            background-color: black;
+           width: 32%;
            .discount {
              color: $cl_primary;
              background-color: #cc397f;
